sfSandBoxCode/force-app/main/default/objects/Windrow_Maturity_Data__c/Windrow_Maturity_Data__c.object-meta.xml
<CustomObject>
    <description>Child object of the windrows that stores data on maturity status</description>
    <label>Windrow Maturity Data</label>
    <nameField>
        <label>Windrow Maturity Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Windrow Maturity Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>