sfSandBoxCode/force-app/main/default/objects/Windrow_Maturity_Data__c/fields/EC__c.field-meta.xml
<CustomField>
    <fullName>EC__c</fullName>
    <label>EC</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>