sfSandBoxCode/force-app/main/default/objects/Windrow_Maturity_Data__c/fields/Germination__c.field-meta.xml
<CustomField>
    <fullName>Germination__c</fullName>
    <label>Germination(%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>