sfSandBoxCode/force-app/main/default/objects/Windrow_Maturity_Data__c/fields/Germination_Interpretation__c.field-meta.xml
<CustomField>
    <fullName>Germination_Interpretation__c</fullName>
    <formula>IF (Germination__c &gt;= 80, &quot;High Germination&quot;, 
IF (AND(Germination__c &gt;=51, Germination__c &lt;= 79), &quot;Moderate Germination(Compost has some limitations, pH and/or EC)&quot;, 
IF (Germination__c &lt;= 50, &quot;Low Germination(Germination Should be repeated after 3 weeks)&quot;,NULL)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Germination Interpretation</label>
    <type>Text</type>
</CustomField>