sfSandBoxCode/force-app/main/default/objects/Windrow_Maturity_Data__c/fields/Packaging_Moisture__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Moisture__c</fullName>
    <description>%</description>
    <inlineHelpText>%</inlineHelpText>
    <label>Packaging Moisture</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>