sfSandBoxCode/force-app/main/default/objects/Windrow_Maturity_Data__c/fields/Windrow__c.field-meta.xml
<CustomField>
    <fullName>Windrow__c</fullName>
    <description>Master-Detail field from Window</description>
    <label>Windrow</label>
    <referenceTo>Windrow__c</referenceTo>
    <relationshipLabel>Windrow Maturity Data</relationshipLabel>
    <relationshipName>Windrow_Maturity_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>